# epig

./: README.md
branches/multi-encoding/src/: EpiG.h  EpiG_mpi.h  Makefile.am  ccuda_multi.linkinfo  circuitdecder.pl  cstGA.cc  cublas_test  cuda_compile_inte-lmkl.sh  cuda_tools.cc  gates.inn  gates3.inn  main.cc  runadaptpermparamsearch.pl  runall.pl  runpermparamsearch.pl  standard_multi.cc  template.txt
branches/multi-encoding/src/.deps/: Qe.Po  cstGA.Po  tools.Po
branches/multi-encoding/src/.svn/: entries
trunk/: Makefile  Makefile.in  (+8 more)
trunk/src/: EpiG.h  EpiG.h~  Makefile  Makefile.am  Makefile.am~  Makefile.in  Qe.cc  assigntemplate.txt  assigntemplate.txt~  c3not_cliff.in~  ccuda_multi.cu  ccuda_multi.cu.bak  ccuda_multi.cu~  circuitdecder.pl  circuitdecder.pl~  cstGA.cc  cuda_stdnrt.cu  cuda_stdnrt.cu~  cuda_tools.cc~  cuda_tools.cu  entang3_cliff.in  entang3_cliff.in~  entang3_cv.in  epig  garesanalyzer.pl~  gates.inn  gates3.inn  main.cc  main.cc~  param.h  param.h~  pulses8new  runadaptpermparamsearch.pl  runadaptpermparamsearch.pl~  runpermparamsearch.pl  runpermparamsearch.pl~  standard_multi.cc  template.txt  toff3_cliff.in  toff3_cliff.in~  (+3 more)
trunk/src/.deps/.svn/: entries
trunk/src/.svn/: entries
trunk/src/.svn/text-base/: EpiG.h.svn-base  Makefile.am.svn-base  Makefile.in.svn-base  Makefile.svn-base  Makefile_c.svn-base  ccuda_multi.cu.svn-base  cstGA.cc.svn-base  cuda_tools.cc.svn-base  main.cc.svn-base  mpicstGA.cc.svn-base  qmddfunc.cc.svn-base  runadaptpermparamsearch.pl.svn-base  runpermparamsearch.pl.svn-base  template.txt.svn-base
(+172 files in other folders)
